# cps320

./: README.md
CultureApp420/project-2025-brunneusferrummalleus/: .gitignore  Caddyfile  Dockerfile  README.md  compose.yml  entrypoint.prod.sh  events.json  flake.nix  main.py  manage.py  pyproject.toml  temp.sh
CultureApp420/project-2025-brunneusferrummalleus/.github/workflows/: deploy-django.yml  docker-test.yml
CultureApp420/project-2025-brunneusferrummalleus/brunneus_ferrum_malleus/: admin.py  asgi.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
CultureApp420/project-2025-brunneusferrummalleus/brunneus_ferrum_malleus/management/commands/: import_events.py
CultureApp420/project-2025-brunneusferrummalleus/brunneus_ferrum_malleus/migrations/: 0001_initial.py  0002_alter_event_location.py  0003_attendance.py
CultureApp420/project-2025-brunneusferrummalleus/brunneus_ferrum_malleus/templates/: attendance_fail.html  attendance_success.html  home.html  scan.html  scaned.html
CultureApp420/project-2025-brunneusferrummalleus/brunneus_ferrum_malleus/templates/admin/: event_changelist.html  event_qr_code.html
CultureApp420/project-2025-brunneusferrummalleus/journals/: Sprint_1_Documentation.md  brunneus.md
CultureApp420/project-2025-brunneusferrummalleus/k8s/: db-deployment.yaml  db-service.yaml  nginx-config.yaml  pg-data-persistentvolumeclaim.yaml  web-deployment.yaml  web-secret.yaml  web-service.yaml
CultureApp420/project-2025-brunneusferrummalleus/k8s/dev/: ingress.yml
CultureApp420/project-2025-ctrl-alt-delete/: README.md  (+1 more)
(+602 files in other folders)
